# git-bot-feedback

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cspell.config.yml  nurfile  pyproject.toml
.config/: cliff.toml  nextest.toml
.github/: common.nu  dependabot.yml  requirements.txt
.github/workflows/: bump-n-release.nu  bump-n-release.yml  docs.yml  pre-commit.yml  python.yml  rust.yml
bindings/python/: CHANGELOG.md  Cargo.toml  README.md  README.rst  git_bot_feedback.pyi  pyproject.toml
bindings/python/src/: lib.rs  wrapper.rs
docs/: conf.py  index.rst  logo.xcf
docs/API/: client.rst  file-annotations.rst  file-changes.rst  index.rst  output-variables.rst  pr-reviews.rst  thread-comments.rst
examples/: output_variables.rs
src/: error.rs  file_annotations.rs  git_diff.rs  lib.rs  output_variable.rs  thread_comments.rs
src/client/: common.rs  local.rs  mod.rs
src/client/gitea/: mod.rs  serde_structs.rs  specific_api.rs
src/client/github/: graphql.rs  mod.rs  serde_structs.rs  specific_api.rs
src/comments/: mod.rs  review_comments.rs  thread_comments.rs
src/file_utils/: file_filter.rs  mod.rs
tests/: common.rs  generic_client.rs  gitea_file_changes.rs  gitea_output_variables.rs  gitea_pr_reviews.rs  gitea_step_summary.rs  gitea_thread_comments.rs  github_comments.rs  github_file_annotations.rs  github_file_changes.rs  github_output_variables.rs  github_pr_reviews.rs  github_step_summary.rs  github_thread_comments.rs  local_client.rs
tests/assets/file_changes/gitea/: patch.diff
tests/assets/ignored_paths/error/: .gitmodules
tests/assets/reviews/gitea/: review_comments_outdated_pg1.json  review_comments_reused_all.json  review_comments_reused_pg1.json  review_comments_reused_pg2.json  reviews_no_comments_pg1.json  reviews_outdated_pg1.json  reviews_reused_pg2.json
tests/assets/reviews/github/: reviews_27.json  reviews_46_pg1.json  reviews_46_pg2.json  reviews_threads_27.json  reviews_threads_46_pg1.json  reviews_threads_46_pg2.json  reviews_threads_46_pg3.json  reviews_threads_empty.json
tests/assets/thread_comment/github/: push_comments_deadbeef.json
tests/comment_test_assets/github/: pr_comments_pg1.json
