[package]
name = "git-bot-feedback"
description = "A library designed for CI tools that posts comments on a Pull Request."
version = "0.2.0"
edition = "2024"
repository = "https://github.com/2bndy5/git-bot-feedback"
license-file = "LICENSE"

[dependencies]
log = "0.4.29"
chrono = "0.4.43"
reqwest = "0.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.8" # pinned to whatever reqwest uses
regex = { version = "1.12.3", optional = true }
fast-glob = { version = "1.0.0", optional = true }
async-trait = "0.1.89"

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.25.0"

[build-dependencies]
chrono = {version = "0.4.43", features = ["now"]}

[features]
regex = ["dep:regex"]
fast-glob = ["dep:fast-glob"]

# feature that enables getting file changes
file-changes = ["fast-glob", "regex"]

# GitHub implementation/support
github = []

# Gitea implementation/support
gitea = []

# features enabled by default
default = ["github"]

# optional feature to silence a compiler error if/when
# no features enable any git server implementations
custom-git-server-impl = []

# This feature is intended to be a dev-only feature.
# It is not intended for end users of this library.
# It used to expedite tests about rate limit violations.
test-skip-wait-for-rate-limit = []

[package.metadata.docs.rs]
# extra metadata for builds on docs.rs
features = ["file-changes"]
rustdoc-args = ["--cfg", "docsrs"]
