[package]
name = "git-bot-feedback-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "git_bot_feedback"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
git-bot-feedback = { path = "../..", version = "0.6.1", features = ["file-changes", "pyo3"] }
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.4"
reqwest = { workspace = true, features = ["default-tls"] }
tokio = { workspace = true }
