[package]
name = "git-bot-feedback-py"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A Python library (written in Rust) designed for CI tools to easily submit feedback on a git server."
documentation = "https://2bndy5.github.io/git-bot-feedback"
publish = false

[lib]
name = "git_bot_feedback"
crate-type = ["cdylib"] # spell-checker: disable-line
path = "src/lib.rs"

[dependencies]
git-bot-feedback = { path = "../..", version = "0.8.0", features = ["file-changes", "pyo3"] }
pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime"] }
pyo3-log = "0.13.4"
reqwest = { workspace = true, features = ["default-tls"] }
tokio = { workspace = true }
